# rate_limited_service

./: Cargo.toml  README.md
postman collection/: Rate_Limiter_Endpoints.postman_collection.json
src/: main.rs  rate_limiter.rs
